# chatgpt-api-http-server

./: CMakeLists.txt  README.md
include/: chat_gpt_client.hpp  chatbot_adapter.hpp  chatbot_interface.hpp  http_server.hpp
src/: chat_gpt_client.cpp  chatbot_adapter.cpp  http_server.cpp  main.cpp
